fix overflow:hidden only for mobile devices

--- a/src/styles/disciplines.sass
+++ b/src/styles/disciplines.sass
@@ -16,6 +16,8 @@
 .disciplines
     padding: 38px 20px 44px
     background-color: $eerieBlack
+    position: relative
+    z-index: 1
     .disciplines-inner
         .disciplines-header
             text-align: center
