--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -47,7 +47,7 @@
         .burger
             width: 40px
             height: 20px
-            z-index: 3
+            z-index: 110
             display: flex
             justify-content: center
             align-items: center
@@ -97,7 +97,7 @@
             top: 0
             left: 0
             right: -300vw
-            z-index: 2
+            z-index: 100
             padding: 0 24px
             transition: all ease-in-out 0.7s
             opacity: 0
