--- a/src/styles/schedules.sass
+++ b/src/styles/schedules.sass
@@ -140,6 +140,9 @@
                     &.span-2
                         min-height: 80px
                         align-items: flex-start
+                        padding: 
+                            top: 14px
+                            bottom: 10px
                     &.span-3
                         min-height: 135px
                     &.span-4
