--- a/src/styles/values.sass
+++ b/src/styles/values.sass
@@ -23,6 +23,8 @@
 
 .values
     background-color: $eerieBlack
+    position: relative
+    z-index: 1
     .values-inner
         // Cabecera de la seccion
         padding: 44px 20px 52px
